[gd_scene load_steps=10 format=3 uid="uid://cbp6y3lw4jkft"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_2eygo"]
[ext_resource type="Theme" uid="uid://bmnlkeb5yfupy" path="res://resources/default_theme.tres" id="1_4itpu"]
[ext_resource type="Texture2D" uid="uid://c2ympgpywrdtr" path="res://imgs/title_complete.png" id="1_lxppb"]
[ext_resource type="Texture2D" uid="uid://bsmrqwakoce8u" path="res://imgs/title_frames.png" id="2_f8vvg"]
[ext_resource type="Texture2D" uid="uid://b5eywq4p6qlkl" path="res://imgs/title_line.png" id="3_36e2b"]
[ext_resource type="Texture2D" uid="uid://t6td8hp7ks2l" path="res://imgs/the_rules_logo.png" id="5_v2g04"]
[ext_resource type="Texture2D" uid="uid://dd48jw6jwk87e" path="res://imgs/logo_1.png" id="7_crs2n"]

[sub_resource type="Gradient" id="Gradient_8bdcg"]
colors = PackedColorArray(0.470588, 0.45098, 0.584314, 1, 0.286275, 0.247059, 0.403922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ocln8"]
gradient = SubResource("Gradient_8bdcg")
height = 256
fill_to = Vector2(0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_4itpu")
script = ExtResource("1_2eygo")
metadata/_edit_lock_ = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2(400, 850)

[node name="bg_blue" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -800.0
offset_top = -1700.0
offset_right = 1600.0
color = Color(0.470588, 0.45098, 0.584314, 1)

[node name="bg_gradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -800.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ocln8")
metadata/_edit_lock_ = true

[node name="username" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 21.0
offset_right = 257.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 48

[node name="title" type="Node2D" parent="."]
visible = false
position = Vector2(432, 408)

[node name="TitleFrames" type="Sprite2D" parent="title"]
position = Vector2(-281, 57)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_f8vvg")
hframes = 6

[node name="TitleFrames2" type="Sprite2D" parent="title"]
position = Vector2(-201, 50)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_f8vvg")
hframes = 6
frame = 1

[node name="TitleFrames3" type="Sprite2D" parent="title"]
position = Vector2(-108, 33)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_f8vvg")
hframes = 6
frame = 2

[node name="TitleFrames4" type="Sprite2D" parent="title"]
position = Vector2(1, 30)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_f8vvg")
hframes = 6
frame = 3

[node name="TitleFrames5" type="Sprite2D" parent="title"]
position = Vector2(101, 47)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_f8vvg")
hframes = 6
frame = 4

[node name="TitleFrames6" type="Sprite2D" parent="title"]
position = Vector2(194, 40)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_f8vvg")
hframes = 6
frame = 5

[node name="title_line" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 84.0
offset_top = 503.0
offset_right = 984.0
offset_bottom = 603.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_36e2b")
expand_mode = 1
stretch_mode = 1

[node name="title_reference" type="Sprite2D" parent="."]
visible = false
position = Vector2(407, 470)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_lxppb")
metadata/_edit_lock_ = true

[node name="buttons" type="Control" parent="."]
anchors_preset = 0
offset_top = 503.0
offset_right = 800.0
offset_bottom = 1310.0
mouse_filter = 2

[node name="settings" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = 454.5
offset_right = 279.0
offset_bottom = 572.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings
"

[node name="credits" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = 626.5
offset_right = 269.0
offset_bottom = 744.5
grow_horizontal = 2
grow_vertical = 2
text = "Connect"

[node name="how_to" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = 264.5
offset_right = 274.0
offset_bottom = 382.5
grow_horizontal = 2
grow_vertical = 2
text = "How to Play"

[node name="puzzles" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = 84.5
offset_right = 274.0
offset_bottom = 202.5
grow_horizontal = 2
grow_vertical = 2
text = "Create Puzzle"

[node name="play" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -94.5
offset_right = 274.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
text = "Play Game"

[node name="how_to" type="Control" parent="."]
anchors_preset = 0
offset_left = -800.0
offset_right = -15.0
offset_bottom = 1700.0

[node name="title" type="Sprite2D" parent="how_to"]
texture_filter = 2
position = Vector2(403, 191)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_v2g04")

[node name="RichTextLabel" type="RichTextLabel" parent="how_to"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.5
offset_top = -418.0
offset_right = 337.5
offset_bottom = 523.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "During your turn, you must accomplish two actions:

     1. Move your character to any unoccupied, adjacent square.
     2. Place a mine on [i]any[/i] unoccupied square.

If you are unable to move, your character falls, and you're out of the game!

"

[node name="got_it" type="Button" parent="how_to"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -216.0
offset_right = 250.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
text = "Got it!"

[node name="credits" type="Control" parent="."]
anchors_preset = 0
offset_left = 800.0
offset_right = 1600.0
offset_bottom = 1700.0
mouse_filter = 2

[node name="got_it" type="Button" parent="credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -216.0
offset_right = 250.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
text = "Got it!"

[node name="log_out" type="Button" parent="credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -234.0
offset_top = -1604.0
offset_right = 266.0
offset_bottom = -1486.0
grow_horizontal = 2
grow_vertical = 0
text = "Log Out"

[node name="RichTextLabel" type="RichTextLabel" parent="credits"]
layout_mode = 0
offset_left = 111.0
offset_top = 476.0
offset_right = 708.0
offset_bottom = 807.0
bbcode_enabled = true
text = "[center]Pretend like there is something here"

[node name="Logo1" type="Sprite2D" parent="."]
position = Vector2(399, 360)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_crs2n")

[connection signal="pressed" from="buttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="buttons/how_to" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="buttons/puzzles" to="." method="_on_puzzles_pressed"]
[connection signal="pressed" from="buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="how_to/got_it" to="." method="_on_got_it_pressed"]
[connection signal="pressed" from="credits/got_it" to="." method="_on_got_it_pressed"]
[connection signal="pressed" from="credits/log_out" to="." method="_on_log_out_pressed"]
